[project]
name = "crossborder-llm-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-core>=1.33.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "openai>=1.76.0",
    "openai-agents>=0.0.13",
    "pip>=25.1",
    "uvicorn>=0.34.2",
]
