[project]
name = "crossborder-llm-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-core>=1.33.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "langchain>=0.3.24",
    "langchain-openai>=0.3.14",
    "langgraph>=0.3.34",
    "openai>=1.76.0",
    "openai-agents>=0.0.13",
    "pip>=25.1",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "selenium>=4.32.0",
    "uvicorn>=0.34.2",
    "webdriver-manager>=4.0.2",
]
